MMCPA-78: Tab alignment correction for tablet on delivery page.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-delivery.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-delivery.scss
@@ -255,6 +255,16 @@
         width: calc(50% - 28px);
       }
 
+      @include breakpoint($only-tablet) {
+        &.tab-click-collect {
+          margin-#{$left}: 2px;
+
+          &.active--tab--head {
+            margin-#{$left}: 3px;
+          }
+        }
+      }
+
       @include breakpoint($tablet) {
         &.active--tab--head {
           position: relative;
